Fix page responsive, refactoring components (#22)
* Fix respoinsive, refactoring styles & components

* Remove horizontal scroll on phone screens

* Fix ecosystem crop

* Remove unused Home.css

* Add lists to global css

* Show button in phone screen

--- a/src/components/action/FooterAction.module.css
+++ b/src/components/action/FooterAction.module.css
@@ -1,10 +1,9 @@
 .footerAction {
-  padding: 0.65vw 1.25vw 0.65vw;
+  padding: 1.75vw 4vw 1.75vw;
   border-radius: 10vw;
   background-color: #ffd400;
-  font-size: 1.05vw;
+  font-size: 4vw;
   font-weight: 400;
-  line-height: 1.1;
   color: #000;
   line-height: 1.4;
   transition: all 0.15s ease;
@@ -14,9 +13,9 @@
   transform: scale(1.08);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .footerAction {
-    padding: 1.75vw 4vw 1.75vw;
-    font-size: 4vw;
+    padding: 0.65vw 1.25vw 0.65vw;
+    font-size: 1.05vw;
   }
 }
