--- a/src/components/team/Team.module.css
+++ b/src/components/team/Team.module.css
@@ -1,9 +1,11 @@
 .team-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  align-items: start;
   justify-content: space-between;
-  margin: 5vh -1vw;
+  align-items: start;
+  margin: 0;
+  padding: 0 2vw;
+  list-style: none;
 }
 
 .team-grid__item {
@@ -51,6 +53,8 @@
     grid-template-columns: repeat(6, 1fr);
     align-items: start;
     justify-content: space-between;
+    margin: 5vh -1vw;
+    padding: 0;
   }
 
   .team-grid__item {
